--- a/AIOT_ Day_026_HW.ipynb
+++ b/AIOT_ Day_026_HW.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "front-conflict",
+   "id": "covered-feelings",
    "metadata": {},
    "source": [
     "# 作業1\n",
@@ -11,16 +11,51 @@
   },
   {
    "cell_type": "markdown",
-   "id": "friendly-range",
+   "id": "desperate-poultry",
    "metadata": {},
    "source": [
     "##### Ans: 使用原生程式相較 os.system 彈性更高。"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "white-pickup",
+   "metadata": {},
+   "source": [
+    "# 作業2\n",
+    "##### 請使用imghdr函式庫檢查下面連結提供的影像是否為png格式"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "dirty-creature",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image type is png\n"
+     ]
+    }
+   ],
+   "source": [
+    "from imghdr import what\n",
+    "from io import BytesIO\n",
+    "import requests\n",
+    "\n",
+    "res = requests.get(\"https://i.imgur.com/hM6uFKZ.png\")\n",
+    "data = BytesIO(res.content)\n",
+    "\n",
+    "img_type = what(data)\n",
+    "print(\"Image type is {}\".format(img_type))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "satellite-guitar",
+   "id": "sticky-flooring",
    "metadata": {},
    "outputs": [],
    "source": []
